# obstacle_detector_interfaces

./: CMakeLists.txt  package.xml
msg/: CircleObstacle.msg  Obstacles.msg
srv/: SetState.srv
